Remove versions of ant, jdk and maven from common.inc
We manage them through links from now on.

Change-Id: I83729b8ef2e2931c02feb2a0369daa3970baa844

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 /gerrit
 /buck
 /plugins
-/apache-ant-1.9.4
-/jdk1.8.0_40
-/apache-maven-3.3.1
+/apache-ant-*
+/apache-ant
+/jdk1*
+/jdk
+/apache-maven-*
+/apache-maven
 /gerrit-virtualenv
 /virtualenv
 /watchman
